src/styles/pages/Services.css
.services-section {
  content-visibility: auto;
  contain-intrinsic-size: auto 500px;
}

@media (max-width: 768px) {
  .services-section {
    flex-direction: column;
    align-items: center;
    padding: 1.5rem 1rem;
    gap: 2rem;
  }
}

@media (min-width: 769px) and (max-width: 1024px) {
  .services-section {
    flex-direction: column;
    align-items: center;
    padding: 2rem 1.5rem;
    gap: 2rem;
  }

  .card-services {
    width: 70vw;
    max-width: 70vw;
  }

  .modal-dialog {
    margin: 0.5rem auto;
    max-width: 90vw !important;
  }
}

